<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="mi.ur.de.android.runnersmeetup.Profil">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/weiß"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/weiß"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/weiß"
            android:minEms="5"
            android:id="@+id/input_name"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/weiß"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/weiß"
            android:ems="2"
            android:id="@+id/input_age"
            android:layout_gravity="center_horizontal"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_gender"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/weiß"
                android:id="@+id/gender"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gender_spinner"
                android:layout_below="@+id/gender"
                android:layout_alignStart="@+id/gender"
                android:layout_alignEnd="@+id/gender">

            </Spinner>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gewicht"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/weiß"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/weiß"
            android:textSize="20sp"
            android:hint="@string/gewicht_hint"
            android:ems="6"
            android:textColorHint="@color/hellGrau"
            android:id="@+id/input_kg"
            android:inputType="number"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groeße"
            android:textSize="20sp"
            android:textColor="@color/weiß"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/groeße_hint"
            android:textColorHint="@color/hellGrau"
            android:textColor="@color/weiß"
            android:ems="5"
            android:id="@+id/input_cm"
            android:inputType="number"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <ImageButton
        android:layout_width="97dp"
        android:layout_height="match_parent"
        android:id="@+id/button_bmi"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ok_button"
        android:scaleType="centerCrop" />

</LinearLayout>
